Added endpoints to register users and to login users, improved authentication
