# swagger_server/models/__init__.py
@@ -4,3 +4,5 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.book import Book
+from swagger_server.models.user import User
+from swagger_server.models.user_login_body import UserLoginBody
